--- a/src/templates/en/2019/index.html
+++ b/src/templates/en/2019/index.html
@@ -22,7 +22,7 @@ The Web Almanac by HTTP Archive
       <p>
         Our mission is to combine the raw stats and trends of the HTTP Archive with the expertise of the web community. The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. It is comprised of 20 chapters spanning aspects of page content, user experience, publishing, and distribution.
       </p>
-      <a href="{{ url_for('outline', year=year, lang=lang) }}" class="btn">
+      <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}" class="btn">
         Start exploring
       </a>
     </div>
