--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -56,9 +56,7 @@
       <section class="nav">
         <a class="navigation-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.png" alt="web almanac by http archive"/></a>
         <nav class="nav-items">
-          <a class="navigation-logo" href="https://httparchive.org">
-            <img src="/static/images/ha-home.png" alt="HTTP Archive home" />
-          </a>
+          <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Table of Contents</a>
           <a href="{{ url_for('contributors', year=year, lang=lang) }}">Contributors</a>
           <a href="{{ url_for('methodology', year=year, lang=lang) }}">Methodology</a>
         </nav>
@@ -87,6 +85,9 @@
       <div class="misc">
         <p>Copyright © 2019 Web Almanac. All rights reserved.</p>
         <div>
+          <a class="navigation-logo" href="https://httparchive.org">
+            <img src="/static/images/ha-home.png" alt="HTTP Archive home" />
+          </a>
           <div class="social-media">
             <a href="https://twitter.com/HTTPArchive" class="twitter">
               <img src="/static/images/twitter.png" alt="Twitter" />
