Chapter page styling (#251)
* TOC design

* updated characters

* HA logo

* Styling chapter page

* Added page.css to base_chapter template

* resolve merge conflict

--- a/src/templates/en/2019/base_chapter.html
+++ b/src/templates/en/2019/base_chapter.html
@@ -4,6 +4,11 @@
 {{ metadata.get('title') }} | 2019 | The Web Almanac by HTTP Archive
 {% endblock %}
 
+{% block styles %}
+{{ super() }}
+<link rel="stylesheet" href="/static/css/page.css">
+{% endblock %}
+
 {% macro render_byline() %}
   <div id="byline">By
   {% for author in metadata.get('authors') %}
