--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -6,7 +6,7 @@ Methodology | The Web Almanac by HTTP Archive
 
 {% block styles %}
 {{ super() }}
-<link rel="stylesheet" href="/static/css/methodology.css">
+<link rel="stylesheet" href="/static/css/page.css">
 {% endblock %}
 
 {% block main %}
