Chapter style tweaks (#255)
* Markup chapter data viz and edits

* rename domains to pages
fix broken link

* page styles

* fonts and figures

* typography

* figure styles

* author/reviewer byline

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -26,6 +26,23 @@ a:focus, a:hover {
   text-decoration: underline;
 }
 
+h1.title {
+  margin-top: 0;
+  font-size: 72px;
+  line-height: 80px;
+}
+h1.title::before {
+  display: block;
+  content: '';
+  margin-bottom: 18px;
+  border-bottom: solid 1px #A8CABA;
+  width: 70px;
+}
+.subtitle {
+  font-size: 28px;
+  line-height: 42px;
+}
+
 .btn {
   outline: none;
   border: 1px solid #1A2B49;
@@ -120,7 +137,6 @@ header nav > *:last-child {
   margin-right: 0;
 }
 nav a {
-  font-size: 14px;
   text-decoration: none;
   color: #F2F2F2;
 }
