--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -46,8 +46,8 @@ Methodology | The Web Almanac by HTTP Archive
 
   <section class="content">
     <section class="intro">
-      <h1><div class="decorative-line"></div>Methodology<div class="decorative-line-mobile"></div></h1>
-      <img class="methodology-banner" src="/static/images/methodology-banner.png" alt="">
+      <h1 class="title">Methodology</h1>
+      <img class="content-banner" src="/static/images/methodology-banner.png" alt="">
     </section>
 
     <section>
