--- a/src/templates/en/2019/base_chapter.html
+++ b/src/templates/en/2019/base_chapter.html
@@ -10,10 +10,21 @@
 {% endblock %}
 
 {% macro render_byline() %}
-  <div id="byline">By
+  <div class="byline">Written by
   {% for author in metadata.get('authors') %}
-    {{ config.contributors[author].name if author in config.contributors else author }}
+    {% set author = author | trim() %}
+    <a class="author" href="{{ url_for('contributors', year=year, lang=lang, _anchor=author) }}">{{ config.contributors[author].name if author in config.contributors else author }}</a>{% if loop.index != loop.length and loop.length != 2 %},{% endif %}
+    {% if loop.index == loop.length - 1 %} and{% endif %}
   {% endfor %}
+  </div>
+
+  <div class="byline reviewers">Reviewed by
+  {% for reviewer in metadata.get('reviewers') %}
+    {% set reviewer = reviewer | trim() %}
+    <a class="reviewer" href="{{ url_for('contributors', year=year, lang=lang, _anchor=reviewer) }}">{{ config.contributors[reviewer].name if reviewer in config.contributors else reviewer }}</a>{% if loop.index != loop.length and loop.length != 2 %},{% endif %}
+    {% if loop.index == loop.length - 1 %} and{% endif %}
+  {% endfor %}
+  </div>
 {% endmacro %}
 
 {% macro render_authors() %}
