--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block styles %}
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i, 900|Poppins:300,400,700,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/static/css/2019.css">
 {% endblock %}
